tests/fixtures/syntax/valid/file_contains_expectation.repor
case "file contains" {
  $ true
  assert {
    file <"out/result.json"> contains "\"status\":\"passed\""
  }
}
