tests/fixtures/syntax/invalid/fixture_reference_empty_path.repor
case "fixture reference path must not be empty" {
  $ true
  assert {
    file <"out.txt"> contents_equals @""
  }
}
